GL/src/test/deca/syntax/invalid/deca_sans_objet/string_unclosed.deca
// Description :
// test d’une chaine non fermee
//
// Resultat :
// Erreur lexicale
// Ligne 8 : chaine non fermee
{
"bonjour
}